--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "element-plus": "^2.8.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
@@ -18,6 +19,9 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.29.0",
+    "sass": "^1.79.5",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.8"
   }
 }
